<resources>
    <string name="app_name">Golf Scorecard Buddy</string>
    <string name="scorecards">Scorecards</string>
    <string name="teetimes">Tee Times</string>
    <string name="maps">Nearby Courses</string>
    <string name="scorecards2">Scorecards:</string>
    <string name="course_name">Course Name:</string>
    <string name="hole">Hole:</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="par">Par:</string>
    <string name="yardage">Yardage:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="cont">Continue</string>
    <string name="setup">Scorecard Setup</string>
    <string name="details">Choose From Templates: </string>
    <string name="players">Choose Number of Players: </string>
    <string name="new_sc">New Template</string>
    <string name="teetime_setup">Tee Time Setup</string>
    <string name="enter_course_name">Enter Course Name: </string>
    <string name="enter_teetime">Enter Tee Time: </string>
    <string name="reminder">Enter time for alert: </string>
    <string name="reminder_time0">Never</string>
    <string name="reminder_time1">30 minutes before</string>
    <string name="reminder_time2">1 hour before</string>
    <string name="reminder_time3">2 hours before</string>
    <string name="reminder_time4">1 day before</string>
    <string name="banner_ad_unit_id">ca-app-pub-6098990941180338/8173850401</string>
    <string name="banner_ad_unit_id2">ca-app-pub-6098990941180338/3743650809</string>
    <string name="course_rating">Course Rating: </string>
    <string name="slope_rating">Slope Rating: </string>
    <string name="handicap">Handicap</string>
    <string name="in">IN</string>
    <string name="out">OUT</string>
    <string name="total">TOTAL</string>
    <string name="title_handicap">Handicap:</string>
    <string name="or">OR</string>
</resources>
