<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grass">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.05">

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/teetime_setup"
            android:textSize="@dimen/title_text_size"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:id="@+id/textView_setup"
            android:textColor="#b29647"
            android:shadowColor="@android:color/black"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="8" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1">

        <TextView
            android:text="@string/enter_course_name"
            android:layout_height="match_parent"
            android:id="@+id/textView_name"
            android:textSize="@dimen/text_size"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:textStyle="normal|bold"
            android:textColor="#bba35d"
            android:shadowColor="@android:color/black"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.05">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_name"
            android:layout_weight="1"
            android:textColor="#bba35d"
            android:shadowColor="@android:color/black"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:textSize="@dimen/text_size"
            android:maxLength="20"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/ic_btn_speak_now"
            android:id="@+id/imageButton_mic"
            android:layout_weight="1"
            android:background="#00ffffff"
            android:tint="#bba35d" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1">

        <TextView
            android:text="@string/enter_teetime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView_teetime"
            android:textSize="@dimen/text_size"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:textStyle="normal|bold"
            android:textColor="#bba35d"
            android:shadowColor="@android:color/black"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_weight="1"
            android:scaleX="1.2"
            android:scaleY="1.2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TimePicker
            android:id="@+id/timePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:layout_weight="1"
            android:scaleX="1.2"
            android:scaleY="1.2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:id="@+id/layout_notification_title">

        <TextView
            android:text="@string/reminder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView_reminder"
            android:textSize="@dimen/text_size"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:textStyle="normal|bold"
            android:textColor="#bba35d"
            android:shadowColor="@android:color/black"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.05"
        android:id="@+id/layout_notification">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ebb19e63">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_reminders"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.05">

        <Button
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/button_cancel"
            android:layout_weight="1"
            android:background="@drawable/button_select"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

        <Button
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/button_save"
            android:layout_weight="1"
            android:background="@drawable/button_select"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

</LinearLayout>